--- a/api_getway/src/main/resources/application.properties
+++ b/api_getway/src/main/resources/application.properties
@@ -10,3 +10,13 @@ spring.cloud.gateway.routes[0].uri=lb://eureka-client-service
 spring.cloud.gateway.routes[0].predicates[0]=Path=/test
 spring.cloud.gateway.routes[0].predicates[1]=Method=POST
 
+
+spring.cloud.gateway.routes[1].id=insurance
+spring.cloud.gateway.routes[1].uri=lb://insurance-register
+spring.cloud.gateway.routes[1].predicates[0]=Path=/insurance
+spring.cloud.gateway.routes[1].predicates[1]=Method=POST
+
+spring.cloud.gateway.routes[2].id=for_test
+spring.cloud.gateway.routes[2].uri=lb://insurance-register
+spring.cloud.gateway.routes[2].predicates[0]=Path=/for_test
+spring.cloud.gateway.routes[2].predicates[1]=Method=GET
