--- a/api_getway/src/main/resources/application.properties
+++ b/api_getway/src/main/resources/application.properties
@@ -10,6 +10,7 @@ spring.cloud.gateway.routes[0].uri=lb://eureka-client-service
 spring.cloud.gateway.routes[0].predicates[0]=Path=/test
 spring.cloud.gateway.routes[0].predicates[1]=Method=POST
 
+#+++INSURANCE
 
 spring.cloud.gateway.routes[1].id=insurance
 spring.cloud.gateway.routes[1].uri=lb://insurance-register
@@ -20,3 +21,27 @@ spring.cloud.gateway.routes[2].id=for_test
 spring.cloud.gateway.routes[2].uri=lb://insurance-register
 spring.cloud.gateway.routes[2].predicates[0]=Path=/for_test
 spring.cloud.gateway.routes[2].predicates[1]=Method=GET
+
+
+spring.cloud.gateway.routes[3].id=i_getall
+spring.cloud.gateway.routes[3].uri=lb://insurance-register
+spring.cloud.gateway.routes[3].predicates[0]=Path=/insurance_getall
+spring.cloud.gateway.routes[3].predicates[1]=Method=GET
+
+#+++GIBDD
+
+spring.cloud.gateway.routes[4].id=gibdd
+spring.cloud.gateway.routes[4].uri=lb://gibdd-register
+spring.cloud.gateway.routes[4].predicates[0]=Path=/gibdd
+spring.cloud.gateway.routes[4].predicates[1]=Method=POST
+
+spring.cloud.gateway.routes[5].id=gibdd_for_test
+spring.cloud.gateway.routes[5].uri=lb://gibdd-register
+spring.cloud.gateway.routes[5].predicates[0]=Path=/gibdd_for_test
+spring.cloud.gateway.routes[5].predicates[1]=Method=GET
+
+spring.cloud.gateway.routes[6].id=g_getall
+spring.cloud.gateway.routes[6].uri=lb://gibdd-register
+spring.cloud.gateway.routes[6].predicates[0]=Path=/gibdd_getall
+spring.cloud.gateway.routes[6].predicates[1]=Method=GET
+
