--- a/gibdd_register/src/main/resources/application.properties
+++ b/gibdd_register/src/main/resources/application.properties
@@ -1,4 +1,4 @@
-spring.application.name=dps_register
+spring.application.name=gibdd-register
 server.port=0
 eureka.client.service-url.defaultZone=http://localhost:8761/eureka/
 
@@ -12,7 +12,6 @@ spring.datasource.driverClassName=org.postgresql.Driver
 
 spring.jpa.show-sql=false
 spring.jpa.hibernate.ddl-auto=validate
-
 
 #flyway.properties
 spring.flyway.enabled=true
