--- a/insurance_register/pom.xml
+++ b/insurance_register/pom.xml
@@ -24,7 +24,15 @@
             <artifactId>postgresql</artifactId>
             <version>42.4.0</version>
         </dependency>
-<!--   -Добавил вручную     -->
+
+        <!-- https://mvnrepository.com/artifact/org.flywaydb/flyway-core -->
+        <dependency>
+            <groupId>org.flywaydb</groupId>
+            <artifactId>flyway-core</artifactId>
+            <version>8.5.13</version>
+        </dependency>
+
+        <!--   -Добавил вручную     -->
 
 
         <dependency>
