--- a/gibdd_register/pom.xml
+++ b/gibdd_register/pom.xml
@@ -24,6 +24,14 @@
             <artifactId>postgresql</artifactId>
             <version>42.4.0</version>
         </dependency>
+
+        <!-- https://mvnrepository.com/artifact/org.flywaydb/flyway-core -->
+        <dependency>
+            <groupId>org.flywaydb</groupId>
+            <artifactId>flyway-core</artifactId>
+            <version>8.5.11</version>
+        </dependency>
+
         <!--   -Добавил вручную     -->
         <dependency>
             <groupId>org.springframework.boot</groupId>
@@ -49,6 +57,10 @@
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter-test</artifactId>
             <scope>test</scope>
+        </dependency>
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-web</artifactId>
         </dependency>
     </dependencies>
     <dependencyManagement>
