gibdd_register Сделал Entity, пробую делать регистрацию без микросервисов

--- a/gibdd_register/src/main/resources/application.properties
+++ b/gibdd_register/src/main/resources/application.properties
@@ -2,7 +2,7 @@ spring.application.name=gibdd-register
 server.port=0
 eureka.client.service-url.defaultZone=http://localhost:8761/eureka/
 
-spring.datasource.url=jdbc:postgresql://localhost:5434/dps_register
+spring.datasource.url=jdbc:postgresql://localhost:5440/gibdd_register
 spring.datasource.username=root
 spring.datasource.password=root
 spring.datasource.driverClassName=org.postgresql.Driver
@@ -17,4 +17,4 @@ spring.jpa.hibernate.ddl-auto=validate
 spring.flyway.enabled=true
 spring.flyway.user=root
 spring.flyway.password=root
-spring.flyway.url=jdbc:postgresql://localhost:5434/dps_register
+spring.flyway.url=jdbc:postgresql://localhost:5440/gibdd_register
