--- a/gibdd_register/pom.xml
+++ b/gibdd_register/pom.xml
@@ -26,11 +26,11 @@
         </dependency>
 
         <!-- https://mvnrepository.com/artifact/org.flywaydb/flyway-core -->
-        <dependency>
-            <groupId>org.flywaydb</groupId>
-            <artifactId>flyway-core</artifactId>
-            <version>8.5.11</version>
-        </dependency>
+<!--        <dependency>-->
+<!--            <groupId>org.flywaydb</groupId>-->
+<!--            <artifactId>flyway-core</artifactId>-->
+<!--            <version>8.5.11</version>-->
+<!--        </dependency>-->
 
         <!--   -Добавил вручную     -->
         <dependency>
