fine_register + insurance_register

--- a/api_getway/src/main/resources/application.properties
+++ b/api_getway/src/main/resources/application.properties
@@ -11,37 +11,37 @@ spring.cloud.gateway.routes[0].predicates[0]=Path=/test
 spring.cloud.gateway.routes[0].predicates[1]=Method=POST
 
 #+++INSURANCE
-
-spring.cloud.gateway.routes[1].id=insurance
+spring.cloud.gateway.routes[1].id=check-insurance
 spring.cloud.gateway.routes[1].uri=lb://insurance-register
-spring.cloud.gateway.routes[1].predicates[0]=Path=/insurance
-spring.cloud.gateway.routes[1].predicates[1]=Method=POST
+spring.cloud.gateway.routes[1].predicates[0]=Path=/check_insurance/**
+spring.cloud.gateway.routes[1].predicates[1]=Method=GET
 
-spring.cloud.gateway.routes[2].id=for_test
-spring.cloud.gateway.routes[2].uri=lb://insurance-register
-spring.cloud.gateway.routes[2].predicates[0]=Path=/for_test
-spring.cloud.gateway.routes[2].predicates[1]=Method=GET
+#+++GIBDD
+spring.cloud.gateway.routes[2].id=vehicle-registration
+spring.cloud.gateway.routes[2].uri=lb://gibdd-register
+spring.cloud.gateway.routes[2].predicates[0]=Path=/vehicle_registration
+spring.cloud.gateway.routes[2].predicates[1]=Method=POST
 
-
-spring.cloud.gateway.routes[3].id=i_getall
+#+++INSURANCE
+spring.cloud.gateway.routes[3].id=test-insurance
 spring.cloud.gateway.routes[3].uri=lb://insurance-register
-spring.cloud.gateway.routes[3].predicates[0]=Path=/insurance_getall
+spring.cloud.gateway.routes[3].predicates[0]=Path=/insurance_test
 spring.cloud.gateway.routes[3].predicates[1]=Method=GET
 
 #+++GIBDD
-
-spring.cloud.gateway.routes[4].id=gibdd
+spring.cloud.gateway.routes[4].id=test-gibdd
 spring.cloud.gateway.routes[4].uri=lb://gibdd-register
-spring.cloud.gateway.routes[4].predicates[0]=Path=/gibdd
-spring.cloud.gateway.routes[4].predicates[1]=Method=POST
+spring.cloud.gateway.routes[4].predicates[0]=Path=/gibdd_test
+spring.cloud.gateway.routes[4].predicates[1]=Method=GET
 
-spring.cloud.gateway.routes[5].id=gibdd_for_test
-spring.cloud.gateway.routes[5].uri=lb://gibdd-register
-spring.cloud.gateway.routes[5].predicates[0]=Path=/gibdd_for_test
+#+++FINES
+spring.cloud.gateway.routes[5].id=test-fine
+spring.cloud.gateway.routes[5].uri=lb://fine-register
+spring.cloud.gateway.routes[5].predicates[0]=Path=/fine_test
 spring.cloud.gateway.routes[5].predicates[1]=Method=GET
 
-spring.cloud.gateway.routes[6].id=g_getall
-spring.cloud.gateway.routes[6].uri=lb://gibdd-register
-spring.cloud.gateway.routes[6].predicates[0]=Path=/gibdd_getall
+#+++FINES
+spring.cloud.gateway.routes[6].id=check-fines
+spring.cloud.gateway.routes[6].uri=lb://fine-register
+spring.cloud.gateway.routes[6].predicates[0]=Path=/check_fines/**
 spring.cloud.gateway.routes[6].predicates[1]=Method=GET
-
