--- a/gibdd_register/pom.xml
+++ b/gibdd_register/pom.xml
@@ -32,6 +32,14 @@
 <!--            <version>8.5.11</version>-->
 <!--        </dependency>-->
 
+        <!-- https://mvnrepository.com/artifact/org.springframework.cloud/spring-cloud-starter-openfeign -->
+        <dependency>
+            <groupId>org.springframework.cloud</groupId>
+            <artifactId>spring-cloud-starter-openfeign</artifactId>
+            <version>2.2.6.RELEASE</version>
+        </dependency>
+
+
         <!--   -Добавил вручную     -->
         <dependency>
             <groupId>org.springframework.boot</groupId>
