fine_register, insurance_register, tech_insp in microservices. Migrations Typo: VehicleType

--- a/api_getway/src/main/resources/application.properties
+++ b/api_getway/src/main/resources/application.properties
@@ -22,26 +22,14 @@ spring.cloud.gateway.routes[2].uri=lb://gibdd-register
 spring.cloud.gateway.routes[2].predicates[0]=Path=/vehicle_registration
 spring.cloud.gateway.routes[2].predicates[1]=Method=POST
 
-#+++INSURANCE
-spring.cloud.gateway.routes[3].id=test-insurance
-spring.cloud.gateway.routes[3].uri=lb://insurance-register
-spring.cloud.gateway.routes[3].predicates[0]=Path=/insurance_test
+#+++FINES
+spring.cloud.gateway.routes[3].id=check-fines
+spring.cloud.gateway.routes[3].uri=lb://fine-register
+spring.cloud.gateway.routes[3].predicates[0]=Path=/check_fines/**
 spring.cloud.gateway.routes[3].predicates[1]=Method=GET
 
-#+++GIBDD
-spring.cloud.gateway.routes[4].id=test-gibdd
-spring.cloud.gateway.routes[4].uri=lb://gibdd-register
-spring.cloud.gateway.routes[4].predicates[0]=Path=/gibdd_test
+#TECHINSPECTION
+spring.cloud.gateway.routes[4].id=check-tech-inspection
+spring.cloud.gateway.routes[4].uri=lb://technical-inspection-register
+spring.cloud.gateway.routes[4].predicates[0]=Path=/check_tech/**
 spring.cloud.gateway.routes[4].predicates[1]=Method=GET
-
-#+++FINES
-spring.cloud.gateway.routes[5].id=test-fine
-spring.cloud.gateway.routes[5].uri=lb://fine-register
-spring.cloud.gateway.routes[5].predicates[0]=Path=/fine_test
-spring.cloud.gateway.routes[5].predicates[1]=Method=GET
-
-#+++FINES
-spring.cloud.gateway.routes[6].id=check-fines
-spring.cloud.gateway.routes[6].uri=lb://fine-register
-spring.cloud.gateway.routes[6].predicates[0]=Path=/check_fines/**
-spring.cloud.gateway.routes[6].predicates[1]=Method=GET
